--- a/src/styles.css
+++ b/src/styles.css
@@ -8,36 +8,278 @@ h3 {
 }
 
 .main {
-  margin-top: 15vh;
-  padding: 20px 0;
+  margin-top: 20px;
 }
 
-/* Header */
+aside {
+	position: absolute;
+	left: 10px;
+}
 
-.header {
-  height: 25vh;
+
+/* Navbar */
+nav {
+  height: 40vh!important;
   width: 100%;
   background-color: black;
+}
+
+.nav-wrapper {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  background-color: black;
   color: white;
-  position: relative;
   text-align: center;
+  backface-visibility: hidden;
+}
+
+.nav-wrapper *,
+.nav-wrapper:before,
+.nav-wrapper:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.nav-wrapper:before,
+.nav-wrapper:after {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  content: '';
+  background-color: #fff;
+  z-index: 1;
+  opacity: 0;
+}
+
+.nav-wrapper:hover .banner,
+.nav-wrapper.hover .banner {
+  zoom: 1;
+  filter: alpha(opacity=50);
+  -webkit-opacity: 0.5;
+  opacity: 0.5;
 }
 
 .banner {
+  height: 100%;
   width: 100%;
+  z-index: 1;
   position: relative;
 }
 
-.name-logo {
-  height: 40vh;
+.brand-logo {
   position: absolute;
-  top: 10px;
+  position: absolute;
+  top: 5px;
   left: 40%;
   z-index: 3;
 }
 
-.header-btn {
+.name-logo {
+  max-height: 230px;
+}
+
+.nav-btns {
   position: absolute;
+  top: 210px;
+  right: 10px;
+  font-size: 18px;
+  letter-spacing: 1.5px;
+  line-height: 1em;
+  margin: 15px 40px;
+  text-transform: uppercase;
+  z-index: 2;
+}
+
+.nav-btns li {
+  display: inline-block;
+  list-style: outside none none;
+  margin: 0.5em 0.6em;
+  padding: 12px 15px;
+  position: relative;
+}
+
+.nav-btns li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.nav-btns li:before,
+.nav-btns li:after {
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+  height: 2px;
+  width: 35%;
+  background-color: #a852b3;
+  position: absolute;
+  content: '';
+  opacity: 0;
+}
+.nav-btns li:before {
   top: 0;
+  left: 0;
+}
+.nav-btns li:after {
+  bottom: 0;
   right: 0;
 }
+.nav-btns li:hover:before,
+.nav-btns li.hover:before,
+.nav-btns li:hover:after,
+.nav-btns li.hover:after {
+  opacity: 1;
+}
+.nav-btns li:hover:before,
+.nav-btns li.hover:before {
+  left: 65%;
+}
+.nav-btns li:hover:after,
+.nav-btns li.hover:after {
+  right: 65%;
+}
+
+/* About Me */
+
+.about {
+  padding: 0 50px;
+}
+
+.mini-logo {
+  height: 250px;
+  border-radius: 100%;
+  border: 5px solid #dbdbdb;
+}
+
+.about section {
+  display: inline-block;
+}
+
+.image {
+  width: 40%;
+}
+
+.info {
+  width: 55%;
+  text-align: justify;
+}
+
+/* Skills */
+
+.skills {
+  text-align: center;
+}
+
+.icon-container {
+  display: inline-block;
+}
+
+.icon-container i {
+  font-size: 80px;
+  padding: 20px;
+  background: -webkit-linear-gradient( #cf74ee, #273166);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/* Projects */
+
+.snip1527 {
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+  color: #ffffff;
+  float: left;
+  font-family: 'Lato', Arial, sans-serif;
+  font-size: 16px;
+  max-width: 310px;
+  min-width: 250px;
+  overflow: hidden;
+  position: relative;
+  text-align: left;
+  width: 100%;
+  border-radius: 10px;
+}
+
+.snip1527 * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+}
+
+.snip1527 img {
+  max-width: 100%;
+  vertical-align: top;
+  position: relative;
+}
+
+.snip1527 figcaption {
+  padding: 15px 20px 15px;
+  position: absolute;
+  bottom: 0;
+  z-index: 1;
+  width: 100%;
+}
+
+.snip1527 figcaption:before {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #700877;
+  content: '';
+  background: -moz-linear-gradient(90deg, #2c128b 30%, #9c21c2 100%, #ff2759 100%);
+  background: -webkit-linear-gradient(90deg, #2c128b 30%, #9c21c2 100%, #ff2759 100%);
+  background: linear-gradient(90deg, #2c128b 30%, #9c21c2 100%, #c22192 100%);
+  opacity: 0.6;
+  z-index: -1;
+}
+
+.snip1527 h4,
+.snip1527 p {
+  margin: 0;
+  padding: 0;
+}
+
+.snip1527 h4 {
+  display: inline-block;
+  letter-spacing: -0.4px;
+  margin-bottom: 5px;
+}
+
+.snip1527 p {
+  font-size: 0.8em;
+  line-height: 1.6em;
+  margin-bottom: 0px;
+}
+
+.snip1527:hover img,
+.snip1527.hover img {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+.snip1527 a {
+  background-color: #7008776c;
+  margin-top: 5px;
+}
+
+.snip1527 a:hover {
+  background-color: #700877;
+}
+
+
+
+/* Contact */
+
+/* Footer */
+
+footer {
+  height: 50px;
+  width: 100%;
+  background: black;
+  color: white;
+  padding-top: 2px;
+}
+
