maquetado listo, falta agregar proyectos y linkear

--- a/src/css/banner.css
+++ b/src/css/banner.css
@@ -113,3 +113,12 @@
   }
 }
 
+@media (min-width: 320px) and (max-width: 480px) {
+  .name-logo {
+    width: 100%;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 767px) {
+ 
+}
