--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,15 +23,15 @@ p {
 
 .full-menu {
   width: 100%;
-  height: 100%;
+  height: 10vh;
 	align-items: center;
   justify-content: center;
-  position: absolute;
-  background: -moz-linear-gradient(90deg, #0b0522f6 30%, #290933f6 100%, #350913f6 100%);
-  background: -webkit-linear-gradient(90deg, #0b0522f6 30%, #290933f6 100%, #350913f6 100%);
-  background: linear-gradient(90deg, #0b0522f6 30%, #290933f6 100%, #350913f6 100%);
-  opacity: 0.5;
-  transform: translateX(100%);
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  background: -moz-linear-gradient(90deg, #0b0522ad 30%, #290933ad 100%, #350913ad 100%);
+  background: -webkit-linear-gradient(90deg, #0b0522ad 30%, #290933ad 100%, #350913ad 100%);
+  background: linear-gradient(90deg, #0b0522ad 30%, #290933ad 100%, #350913ad 100%);
   transition: all 400ms ease-in;
 }
 
@@ -39,12 +39,9 @@ p {
   height: 100%;
   background-color: transparent;
   display: flex;
-  justify-content: center;
   align-items: center;
   letter-spacing: 1.5px;
   line-height: 1em;
-  /* margin: 15px 40px; */
-  text-transform: uppercase;
   z-index: 2;
 }
 
@@ -57,13 +54,11 @@ p {
   margin: 0.5em 0.6em;
   padding: 12px 15px;
   position: relative;
-  float: unset;
 }
 
 .full-menu li {
   font-size: 4em;
   color: #fff;
-  opacity: 0;
   transform: translateY(2%);
   transition: all 300ms ease-in;
   cursor: pointer;
@@ -72,8 +67,8 @@ p {
 .nav-btns li a {
   color: #fff;
   text-decoration: none;
-  font-size: 3rem;
-  padding: 20px;
+  font-size: 1.5rem;
+  padding: 5px;
 }
 
 .nav-btns li:before,
@@ -115,59 +110,8 @@ p {
   right: 65%;
 }
 
-.full-menu.active {
-  display: flex;
-  transform: translateX(0%);
-  opacity: 1;
-  z-index: 2;
-}
-
-.full-menu.active li {
-  opacity: 1;
-  transform: translateX(0%);
-}
-
-.full-menu.active li:hover {
+.full-menu li:hover {
   animation: zoom 200ms ease-in;
-}
-
-.hamburguer {
-  position: fixed;
-  right: 0;
-  width: 2em;
-  height: 2em;
-  margin: 1em;
-  z-index: 1000;
-  cursor: pointer;
-}
-
-.hamburguer:hover {
-  animation: zoom 300ms ease-in;
-}
-
-.lines {
-  background-color: #fff;
-  width: 100%;
-  height: 5px;
-  margin: 5px 0;
-  transition: all 450ms ease-in;
-}
-
-.close-hamburguer .lines {
-  cursor: pointer;
-}
-
-
-.close-hamburguer .line-top {
-  transform: translateY(200%) rotate(45deg);
-}
-
-.close-hamburguer .line-mid {
-  opacity: 0;
-}
-
-.close-hamburguer .line-bottom {
-  transform: translateY(-200%) rotate(135deg);
 }
 
 @keyframes zoom {
@@ -335,8 +279,8 @@ p {
   margin-top: 5px;
 }
 
-.snip1527 a:hover {
-  background-color: #700877;
+.snip1527 a:hover, .snip1527 a:active {
+  background-color: #700877!important;
 }
 
 /* Contact footer */
@@ -348,6 +292,10 @@ footer {
   color: white;
   padding-top: 20px;
   padding-bottom: 20px;
+}
+
+footer span {
+  font-weight: 700;
 }
 
 footer a {
@@ -393,8 +341,8 @@ footer a {
   }
 }
 
-@media screen and (max-width: 800px) {
-  .column {
+@media  (min-width: 450px) and (max-width: 800px) {
+  .col {
     -ms-flex: 50%;
     flex: 50%;
     max-width: 50%;
