--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -290,8 +290,7 @@ footer {
   width: 100%;
   background: black;
   color: white;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 20px;
 }
 
 footer span {
