--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -19,115 +19,46 @@ p {
   margin-top: 20px;
 }
 
-/* Menu */
 
-.full-menu {
-  width: 100%;
-  height: 10vh;
-	align-items: center;
-  justify-content: center;
-  position: fixed;
-  z-index: 1000;
-  top: 0;
-  background: -moz-linear-gradient(90deg, #0b0522ad 30%, #290933ad 100%, #350913ad 100%);
-  background: -webkit-linear-gradient(90deg, #0b0522ad 30%, #290933ad 100%, #350913ad 100%);
-  background: linear-gradient(90deg, #0b0522ad 30%, #290933ad 100%, #350913ad 100%);
-  transition: all 400ms ease-in;
-}
-
-.nav-btns {
-  height: 100%;
-  background-color: transparent;
-  display: flex;
-  align-items: center;
-  letter-spacing: 1.5px;
-  line-height: 1em;
-  z-index: 2;
-}
-
-.nav-btns ul {
-  list-style: none;
-}
-
-.nav-btns li {
-  list-style: outside none none;
-  margin: 0.5em 0.6em;
-  padding: 12px 15px;
-  position: relative;
-}
-
-.full-menu li {
-  font-size: 4em;
-  color: #fff;
-  transform: translateY(2%);
-  transition: all 300ms ease-in;
-  cursor: pointer;
-}
-
-.nav-btns li a {
-  color: #fff;
-  text-decoration: none;
-  font-size: 1.5rem;
-  padding: 5px;
-}
-
-.nav-btns li:before,
-.nav-btns li:after {
-  -webkit-transition: all 0.35s ease;
-  transition: all 0.35s ease;
-  height: 2px;
-  width: 35%;
-  background-color: #a852b3;
-  position: absolute;
-  content: '';
-  opacity: 0;
-}
-
-.nav-btns li:before {
-  top: 0;
-  left: 0;
-}
-
-.nav-btns li:after {
-  bottom: 0;
-  right: 0;
-}
-
-.nav-btns li:hover:before,
-.nav-btns li.hover:before,
-.nav-btns li:hover:after,
-.nav-btns li.hover:after {
-  opacity: 1;
-}
-
-.nav-btns li:hover:before,
-.nav-btns li.hover:before {
-  left: 65%;
-}
-
-.nav-btns li:hover:after,
-.nav-btns li.hover:after {
-  right: 65%;
-}
-
-.full-menu li:hover {
-  animation: zoom 200ms ease-in;
-}
-
-@keyframes zoom {
-  0%, 100% {
-    transform: scale(1);
+@-webkit-keyframes fadeInUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
   }
-  50% {
-    transform: scale(1.1);
+
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
   }
 }
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.fadeInUp {
+  -webkit-animation-name: fadeInUp;
+  animation-name: fadeInUp;
+}
+
 
 /* About Me */
 
 .about {
   padding: 20px 50px 50px;
-  height: 100%;
+  height: 100vh;
 }
 
 .about .row {
@@ -138,7 +69,7 @@ p {
 
 .mini-logo {
   height: 250px;
-  border-radius: 100%;
+  border-radius: 10px;
   border: 5px solid #dbdbdb;
 }
 
@@ -153,6 +84,8 @@ p {
 .info {
   width: 55%;
   text-align: justify;
+  margin-right: 50px;
+  font-size: 25px;
 }
 
 /* Skills */
@@ -185,15 +118,17 @@ p {
 }
 
 .projects .row {
-  display: -ms-flexbox; /* IE10 */
+  display: -ms-flexbox;
+  /* IE10 */
   display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
+  -ms-flex-wrap: wrap;
+  /* IE10 */
   flex-wrap: wrap;
-  padding: 0!important;
+  padding: 0 !important;
 }
 
 .col {
-  padding: 0!important;
+  padding: 0 !important;
 }
 
 .projects .image {
@@ -279,8 +214,9 @@ p {
   margin-top: 5px;
 }
 
-.snip1527 a:hover, .snip1527 a:active {
-  background-color: #700877!important;
+.snip1527 a:hover,
+.snip1527 a:active {
+  background-color: #700877 !important;
 }
 
 /* Contact footer */
@@ -305,42 +241,54 @@ footer a {
   .name-logo {
     width: 100%;
   }
+
   .about {
     padding: 0;
     padding-top: 5px;
   }
+
   .about .row {
     display: initial;
   }
+
   .image {
     width: 100%;
-  } 
+  }
+
   .mini-logo {
     height: 150px;
   }
+
   .info {
-    width: 80%;
+    width: 100%;
+    font-size: 18px;
+    padding: 20px;
   }
+
   .icon-container i {
     font-size: 50px;
   }
+
   .skills {
     padding: 50px;
   }
+
   .projects {
     padding: 0;
   }
+
   .column {
     -ms-flex: 100%;
     flex: 100%;
     max-width: 100%;
   }
+
   .snip1527 {
     max-width: 25%;
   }
 }
 
-@media  (min-width: 450px) and (max-width: 800px) {
+@media (min-width: 450px) and (max-width: 800px) {
   .col {
     -ms-flex: 50%;
     flex: 50%;
