--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -67,7 +67,9 @@
 
 .nav-btns {
   background-color: transparent;
-  display: flex;
+  width: 100vw;
+  position: fixed;
+  top: 0;
   align-items: center;
   letter-spacing: 1.5px;
   line-height: 1em;
