--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -39,14 +39,12 @@ p {
 
 #aboutSection {
   padding-top: 15vh;
-  margin: 0;
+  margin: 0!important;
 }
 
 .mini-logo {
-  height: 250px;
+  height: 280px;
   border-radius: 10px;
-  border: 5px solid rgba(194,33,146,1);
-  
 }
 
 .snip1581 {
@@ -121,7 +119,7 @@ p {
 }
 
 .snip1527 {
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 6px 16px -4px rgba(0,0,0,0.75);
   color: #ffffff;
   float: left;
   font-size: 16px;
@@ -194,13 +192,13 @@ p {
 }
 
 .snip1527 a {
-  background-color: #7008776c;
+  background-color: #700877;
   margin-top: 5px;
 }
 
 .snip1527 a:hover,
 .snip1527 a:active {
-  background-color: #700877 !important;
+  background-color: #8e0c97 !important;
 }
 
 /* Contact footer */
