--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -118,6 +118,10 @@ p {
   width: 100%;
 }
 
+.projects .row {
+  padding-top: 20px;
+}
+
 .snip1527 {
   box-shadow: 0px 6px 16px -4px rgba(0,0,0,0.75);
   color: #ffffff;
