--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,7 +8,6 @@ body {
   font-family: 'Advent Pro', sans-serif;
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
   line-height: 1.5;
 }
 
@@ -54,8 +53,7 @@ p {
   position: relative;
   display: inline-block;
   overflow: hidden;
-  margin: 8px;
-  min-width: 250px;
+  margin: 10px 0px;  
   max-width: 310px;
   width: 100%;
   background-color: #000000;
@@ -245,6 +243,13 @@ p {
   font-size: 30px;
   padding: 3px;
 }
+
+@media (min-width: 320px) and (max-width: 1024px) {
+  body {
+    overflow-x: hidden;
+  }
+}
+
 
 @media (min-width: 320px) and (max-width: 480px) {
   .topper {
